Update try-catching for HttpClientWrapper